Use monospace font to prevent stopwatch digits from shifting

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: "DroidSansMono";
+  src: url("../assets/fonts/DroidSansMono.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 * {
     box-sizing: border-box;
     padding: 0;
@@ -5,8 +12,10 @@
     color: white;
 }
 
+
 body {
     background-color: #262729;
+    font-family: "DroidSansMono", monospace;
 }
 
 .mainContainer {
